--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="https://images-na.ssl-images-amazon.com/images/I/91fjq4Nw8FL._AC_SL1500_.jpg" alt="also a lion">
+  <img src="https://i.ebayimg.com/images/g/tmIAAOSwhvNfRQNm/s-l1600.jpg" alt="a terrifying site" title="terrifying">
 
 </body>
 </html>
