--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img 
+  src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+  alt="Lion">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+  alt="This was supposed to be a lion" title="Lion">
 
 </body>
 </html>
